lib/pdfio_bindings_generated.dart


  late final _pdfioFileGetIDPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<pdfio_array_t> Function(
              ffi.Pointer<pdfio_file_t>)>>('pdfioFileGetID');
  late final _pdfioFileGetID = _pdfioFileGetIDPtr.asFunction<
      ffi.Pointer<pdfio_array_t> Function(ffi.Pointer<pdfio_file_t>)>();

  ffi.Pointer<ffi.Char> pdfioFileGetKeywords(
    ffi.Pointer<pdfio_file_t> pdf,
  ) {
    return _pdfioFileGetKeywords(
      pdf,
    );
  }

  late final _pdfioFileGetKeywordsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<pdfio_file_t>)>>('pdfioFileGetKeywords');
  late final _pdfioFileGetKeywords = _pdfioFileGetKeywordsPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<pdfio_file_t>)>();

  ffi.Pointer<ffi.Char> pdfioFileGetName(
    ffi.Pointer<pdfio_file_t> pdf,
  ) {
    return _pdfioFileGetName(
      pdf,
    );
  }

  late final _pdfioFileGetNamePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<pdfio_file_t>)>>('pdfioFileGetName');
  late final _pdfioFileGetName = _pdfioFileGetNamePtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<pdfio_file_t>)>();

  int pdfioFileGetNumObjs(
    ffi.Pointer<pdfio_file_t> pdf,
  ) {
    return _pdfioFileGetNumObjs(
      pdf,
    );
  }

  late final _pdfioFileGetNumObjsPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<pdfio_file_t>)>>(
          'pdfioFileGetNumObjs');
  late final _pdfioFileGetNumObjs = _pdfioFileGetNumObjsPtr
      .asFunction<int Function(ffi.Pointer<pdfio_file_t>)>();

  int pdfioFileGetNumPages(
    ffi.Pointer<pdfio_file_t> pdf,
  ) {
    return _pdfioFileGetNumPages(
      pdf,
    );
  }

  late final _pdfioFileGetNumPagesPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<pdfio_file_t>)>>(
          'pdfioFileGetNumPages');
  late final _pdfioFileGetNumPages = _pdfioFileGetNumPagesPtr
      .asFunction<int Function(ffi.Pointer<pdfio_file_t>)>();

  ffi.Pointer<pdfio_obj_t> pdfioFileGetObj(
    ffi.Pointer<pdfio_file_t> pdf,
    int n,
  ) {
    return _pdfioFileGetObj(
      pdf,
      n,
    );
  }

  late final _pdfioFileGetObjPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<pdfio_obj_t> Function(
              ffi.Pointer<pdfio_file_t>, ffi.Int)>>('pdfioFileGetObj');
  late final _pdfioFileGetObj = _pdfioFileGetObjPtr.asFunction<
      ffi.Pointer<pdfio_obj_t> Function(ffi.Pointer<pdfio_file_t>, int)>();

  ffi.Pointer<pdfio_obj_t> pdfioFileGetPage(
    ffi.Pointer<pdfio_file_t> pdf,
    int n,
  ) {
    return _pdfioFileGetPage(
      pdf,
      n,
    );
  }

  late final _pdfioFileGetPagePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<pdfio_obj_t> Function(
              ffi.Pointer<pdfio_file_t>, ffi.Int)>>('pdfioFileGetPage');
  late final _pdfioFileGetPage = _pdfioFileGetPagePtr.asFunction<
      ffi.Pointer<pdfio_obj_t> Function(ffi.Pointer<pdfio_file_t>, int)>();

  int pdfioFileGetPermissions(
    ffi.Pointer<pdfio_file_t> pdf,
    ffi.Pointer<ffi.Int32> encryption,
  ) {
    return _pdfioFileGetPermissions(
      pdf,
      encryption,
    );
  }

  late final _pdfioFileGetPermissionsPtr = _lookup<
      ffi.NativeFunction<
          pdfio_permission_t Function(ffi.Pointer<pdfio_file_t>,
              ffi.Pointer<ffi.Int32>)>>('pdfioFileGetPermissions');
  late final _pdfioFileGetPermissions = _pdfioFileGetPermissionsPtr.asFunction<
      int Function(ffi.Pointer<pdfio_file_t>, ffi.Pointer<ffi.Int32>)>();

  ffi.Pointer<ffi.Char> pdfioFileGetProducer(
    ffi.Pointer<pdfio_file_t> pdf,
  ) {
    return _pdfioFileGetProducer(
      pdf,
    );
  }

  late final _pdfioFileGetProducerPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<pdfio_file_t>)>>('pdfioFileGetProducer');
  late final _pdfioFileGetProducer = _pdfioFileGetProducerPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<pdfio_file_t>)>();

  ffi.Pointer<ffi.Char> pdfioFileGetSubject(
    ffi.Pointer<pdfio_file_t> pdf,
  ) {
    return _pdfioFileGetSubject(
      pdf,
    );
  }

  late final _pdfioFileGetSubjectPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<pdfio_file_t>)>>('pdfioFileGetSubject');
  late final _pdfioFileGetSubject = _pdfioFileGetSubjectPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<pdfio_file_t>)>();

  ffi.Pointer<ffi.Char> pdfioFileGetTitle(
    ffi.Pointer<pdfio_file_t> pdf,
  ) {
    return _pdfioFileGetTitle(
      pdf,
    );
  }

  late final _pdfioFileGetTitlePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<pdfio_file_t>)>>('pdfioFileGetTitle');
  late final _pdfioFileGetTitle = _pdfioFileGetTitlePtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<pdfio_file_t>)>();

  ffi.Pointer<ffi.Char> pdfioFileGetVersion(
    ffi.Pointer<pdfio_file_t> pdf,
  ) {
    return _pdfioFileGetVersion(
      pdf,
    );
  }

  late final _pdfioFileGetVersionPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<pdfio_file_t>)>>('pdfioFileGetVersion');
  late final _pdfioFileGetVersion = _pdfioFileGetVersionPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<pdfio_file_t>)>();

  ffi.Pointer<pdfio_file_t> pdfioFileOpen(
    ffi.Pointer<ffi.Char> filename,
    pdfio_password_cb_t password_cb,
    ffi.Pointer<ffi.Void> password_data,
    pdfio_error_cb_t error_cb,
    ffi.Pointer<ffi.Void> error_data,
  ) {
    return _pdfioFileOpen(
      filename,
      password_cb,
      password_data,
      error_cb,
      error_data,
    );
  }

  late final _pdfioFileOpenPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<pdfio_file_t> Function(
              ffi.Pointer<ffi.Char>,
              pdfio_password_cb_t,
              ffi.Pointer<ffi.Void>,
              pdfio_error_cb_t,
              ffi.Pointer<ffi.Void>)>>('pdfioFileOpen');
  late final _pdfioFileOpen = _pdfioFileOpenPtr.asFunction<
      ffi.Pointer<pdfio_file_t> Function(
          ffi.Pointer<ffi.Char>,
          pdfio_password_cb_t,
          ffi.Pointer<ffi.Void>,
          pdfio_error_cb_t,
          ffi.Pointer<ffi.Void>)>();

  int pdfioFileParse(
    ffi.Pointer<ffi.Char> filename,
  ) {
    return _pdfioFileParse(
      filename,
    );
  }

  late final _pdfioFileParsePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>)>>(
          'pdfioFileParse');
  late final _pdfioFileParse =
      _pdfioFileParsePtr.asFunction<int Function(ffi.Pointer<ffi.Char>)>();

  void pdfioFileSetAuthor(
    ffi.Pointer<pdfio_file_t> pdf,
    ffi.Pointer<ffi.Char> value,
  ) {
    return _pdfioFileSetAuthor(
      pdf,
      value,
    );
  }

  late final _pdfioFileSetAuthorPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<pdfio_file_t>,
              ffi.Pointer<ffi.Char>)>>('pdfioFileSetAuthor');
  late final _pdfioFileSetAuthor = _pdfioFileSetAuthorPtr.asFunction<
      void Function(ffi.Pointer<pdfio_file_t>, ffi.Pointer<ffi.Char>)>();

  void pdfioFileSetCreationDate(
    ffi.Pointer<pdfio_file_t> pdf,
    int value,
  ) {
    return _pdfioFileSetCreationDate(
      pdf,
      value,
    );
  }

  late final _pdfioFileSetCreationDatePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<pdfio_file_t>, time_t)>>('pdfioFileSetCreationDate');
  late final _pdfioFileSetCreationDate = _pdfioFileSetCreationDatePtr
      .asFunction<void Function(ffi.Pointer<pdfio_file_t>, int)>();

  void pdfioFileSetCreator(
    ffi.Pointer<pdfio_file_t> pdf,
    ffi.Pointer<ffi.Char> value,
  ) {
    return _pdfioFileSetCreator(
      pdf,
      value,
    );
  }

  late final _pdfioFileSetCreatorPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<pdfio_file_t>,
              ffi.Pointer<ffi.Char>)>>('pdfioFileSetCreator');
  late final _pdfioFileSetCreator = _pdfioFileSetCreatorPtr.asFunction<
      void Function(ffi.Pointer<pdfio_file_t>, ffi.Pointer<ffi.Char>)>();

  void pdfioFileSetKeywords(
    ffi.Pointer<pdfio_file_t> pdf,
    ffi.Pointer<ffi.Char> value,
  ) {
    return _pdfioFileSetKeywords(
      pdf,
      value,
    );
  }

  late final _pdfioFileSetKeywordsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<pdfio_file_t>,
              ffi.Pointer<ffi.Char>)>>('pdfioFileSetKeywords');
  late final _pdfioFileSetKeywords = _pdfioFileSetKeywordsPtr.asFunction<
      void Function(ffi.Pointer<pdfio_file_t>, ffi.Pointer<ffi.Char>)>();

  int pdfioFileSetPermissions(
    ffi.Pointer<pdfio_file_t> pdf,
    int permissions,
    int encryption,
    ffi.Pointer<ffi.Char> owner_password,
    ffi.Pointer<ffi.Char> user_password,
  ) {
    return _pdfioFileSetPermissions(
      pdf,
      permissions,
      encryption,
      owner_password,
      user_password,
    );
  }

  late final _pdfioFileSetPermissionsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<pdfio_file_t>,
              pdfio_permission_t,
              ffi.Int32,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('pdfioFileSetPermissions');
  late final _pdfioFileSetPermissions = _pdfioFileSetPermissionsPtr.asFunction<
      int Function(ffi.Pointer<pdfio_file_t>, int, int, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>)>();

  void pdfioFileSetSubject(
    ffi.Pointer<pdfio_file_t> pdf,
    ffi.Pointer<ffi.Char> value,
  ) {
    return _pdfioFileSetSubject(
      pdf,
      value,
    );
  }

  late final _pdfioFileSetSubjectPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<pdfio_file_t>,
              ffi.Pointer<ffi.Char>)>>('pdfioFileSetSubject');
  late final _pdfioFileSetSubject = _pdfioFileSetSubjectPtr.asFunction<
      void Function(ffi.Pointer<pdfio_file_t>, ffi.Pointer<ffi.Char>)>();

  void pdfioFileSetTitle(
    ffi.Pointer<pdfio_file_t> pdf,
    ffi.Pointer<ffi.Char> value,
  ) {
    return _pdfioFileSetTitle(
      pdf,
      value,
    );
  }

  late final _pdfioFileSetTitlePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<pdfio_file_t>,
              ffi.Pointer<ffi.Char>)>>('pdfioFileSetTitle');
  late final _pdfioFileSetTitle = _pdfioFileSetTitlePtr.asFunction<
      void Function(ffi.Pointer<pdfio_file_t>, ffi.Pointer<ffi.Char>)>();

  int pdfioObjClose(
    ffi.Pointer<pdfio_obj_t> obj,
  ) {
    return _pdfioObjClose(
      obj,
    );
  }

  late final _pdfioObjClosePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<pdfio_obj_t>)>>(
          'pdfioObjClose');
  late final _pdfioObjClose =
      _pdfioObjClosePtr.asFunction<int Function(ffi.Pointer<pdfio_obj_t>)>();

  ffi.Pointer<pdfio_obj_t> pdfioObjCopy(
    ffi.Pointer<pdfio_file_t> pdf,
    ffi.Pointer<pdfio_obj_t> srcobj,
  ) {
    return _pdfioObjCopy(
      pdf,
      srcobj,
    );
  }

  late final _pdfioObjCopyPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<pdfio_obj_t> Function(ffi.Pointer<pdfio_file_t>,
              ffi.Pointer<pdfio_obj_t>)>>('pdfioObjCopy');
  late final _pdfioObjCopy = _pdfioObjCopyPtr.asFunction<
      ffi.Pointer<pdfio_obj_t> Function(
          ffi.Pointer<pdfio_file_t>, ffi.Pointer<pdfio_obj_t>)>();

  ffi.Pointer<pdfio_stream_t> pdfioObjCreateStream(
    ffi.Pointer<pdfio_obj_t> obj,
    int compression,
  ) {
    return _pdfioObjCreateStream(
      obj,
      compression,
    );
  }
